#------------------------------------------------------------------------------
# Process this file with automake to produce Makefile.in.
#------------------------------------------------------------------------------

SUBDIRS = po src
DIST_SUBDIRS = $(SUBDIRS)
DIST_OTHER      = COPYING 
ACLOCAL_AMFLAGS = -I m4
EXTRA_DIST = config.rpath mkinstalldirs 


